@@ -20,6 +20,7 @@ export("Diagonal",
        "expm",
        "facmul",
        # "isSymmetric" is in R 2.3.0
+#TODO       "isTriangular",
        "lu",
        "norm",
        "rcond",
@@ -167,6 +168,8 @@ exportMethods(
 	      "expm",
 	      "kronecker",
 	      "image",
+## TODO 	      "isSymmetric",
+## TODO 	      "isTriangular",
 	      "norm",
 	      "rcond",
 	      "rowMeans",
