@@ -64,7 +64,7 @@ Class \code{"Matrix"}, by class \code{"dgRMatrix"}.
 \examples{
 m0 <- new("dtRMatrix")
 ## FIXME: show() fails
-m2 <- new("dtRMatrix", x = 1:4, Dim = as.integer(c(2,2)))
+m2 <- new("dtRMatrix", x = 0+ 0:3, Dim = as.integer(c(2,2)))
 str(m2)
 if(FALSE)# FIXME: missing coerce
 str(m3 <- as(Matrix(diag(2)), "dtRMatrix"))
