@@ -1,3 +1,15 @@
+2006-01-15  Martin Maechler  <maechler@stat.math.ethz.ch>
+
+	* src/dgeMatrix.c (dMatrix_validate): new
+	* src/Mutils.c (dense_nonpacked_validate): new
+
+	* src/dtrMatrix.c (dtrMatrix_validate): improved/fixed
+
+
+2006-01-14  Douglas Bates  <bates@stat.wisc.edu>
+
+	* R/AllClass.R (compMatrix), (generalMatrix): new virtual classes
+
 2006-01-07  Douglas Bates  <bates@stat.wisc.edu>
 
 	* DESCRIPTION (Version): 0.99-6 released to CRAN
